@@ -1,5 +1,9 @@
 2018-10-30  Florian Weimer  <fweimer@redhat.com>
 
+	* support/blob_repeat.c (allocate_big): Call mkstemp directly.
+
+2018-10-30  Florian Weimer  <fweimer@redhat.com>
+
 	* stdlib/test-bz22786.c (do_test): Additional free calls to avoid
 	memory leaks.
 
